Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <a id="repositories" class="anchor" href="#repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Repositories</h2>
 
 <p><a href="MCLE">MCLE</a></p>
+
+<h2>
+<a id="armorstands-webgl-render" class="anchor" href="#armorstands-webgl-render" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Armorstand's WebGL Render</h2>
       </section>
     </div>
 
