--- a/index.html
+++ b/index.html
@@ -37,8 +37,15 @@
 
 <p><a href="MCLE">MCLE</a></p>
       </section>
-    </div>
+    
+  </div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?124"></script>
 
+<!-- VK Widget -->
+<div id="vk_groups"></div>
+<script type="text/javascript">
+VK.Widgets.Group("vk_groups", {redesign: 1, mode: 3, width: "220", height: "400", color1: '97A33E', color2: 'FFFFFF', color3: '04FF00'}, 124294779);
+</script>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
