--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
 
 <p><a href="MCLE">MCLE</a></p>
       </section>
-    
-  </div>
+    </div>
+<script type="text/javascript" src="//vk.com/js/api/openapi.js?124"></script>
+
 <script type="text/javascript" src="//vk.com/js/api/openapi.js?124"></script>
 
 <!-- VK Widget -->
-<div id="vk_groups"></div>
+<div id="vk_subscribe"></div>
 <script type="text/javascript">
-VK.Widgets.Group("vk_groups", {redesign: 1, mode: 3, width: "220", height: "400", color1: '97A33E', color2: 'FFFFFF', color3: '04FF00'}, 124294779);
+VK.Widgets.Subscribe("vk_subscribe", {redesign: 1}, 368373001);
 </script>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
