--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <script type="text/javascript">
 VK.Widgets.Subscribe("vk_subscribe", {redesign: 1}, 368373001);
 </script>
+<a href="https://twitter.com/artem_lazarev_" class="twitter-follow-button" data-show-count="false">Follow @artem_lazarev_</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
